@@ -1,6 +1,16 @@
-## ----------------------------------------------------------------------------
-## Configure MonoBURG, an IBurg-like code generator generator
+## configure.ac: this file is part of MonoBURG.
 ##
+## MonoBURG, an iburg like code generator generator.
+##
+## Copyright (C) 2001, 2002, 2004, 2005 Ximian, Inc.
+##
+## This program is free software; you can redistribute it and/or
+## modify it under the terms of the GNU General Public License
+## as published by the Free Software Foundation; either version 2
+## of the License, or (at your option) any later version.
+##
+## The complete GNU General Public Licence Notice can be found as the
+## `NOTICE' file in the root directory.
 
 ## -------------------------------------
 ## Project
@@ -43,6 +53,7 @@ AC_CONFIG_FILES([
   Makefile
   src/Makefile
   tests/Makefile
+  man/Makefile
 ])
 
 # Instantiate the output files
